<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/building_list_item_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/building_initials"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="TV"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/building_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@id/building_initials"
        android:text="Name" />
</RelativeLayout>