<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <!-- Shuttle popup-->
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:elevation="15dp"
            android:layout_above="@+id/relativeLayoutLocateButtonAndCard"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:id="@+id/shuttle_goCampus"
            android:background="@drawable/popup_bg"
            tools:context=".Shuttle">

            <TextView
                android:id="@+id/shuttle_goCampusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shuttle options"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/shuttle_goCampusDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/shuttle_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/shuttle_goCampusClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:layout_gravity="bottom|start"
                    android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/shuttle_goCampusSeeSchedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="See Schedule"
                    android:layout_alignParentRight="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

<!-- relative layout with the locate button and card button to indoor navigation and navigate to campus-->
        <RelativeLayout
            android:id="@+id/relativeLayoutLocateButtonAndCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/addressCardView"
            android:elevation="20dp"
            >

<!--            This is the locate button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/locateButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                app:icon="@drawable/ic_my_location_black_128dp"
                app:iconSize="24dp"
                app:iconPadding="0dp"
                app:iconGravity="end"
                android:textAlignment="center"

                android:insetLeft="8dp"
                android:insetTop="8dp"
                android:insetRight="8dp"
                android:insetBottom="8dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded"
                android:elevation="10dp"

                app:iconTint="@color/colorPrimary"
                android:backgroundTint="@color/white"

                android:onClick="onLocateButtonPressed"

                android:layout_alignParentRight="true"
                />

<!--            This is the address card that will be clickable to navigate to campus -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewNavigationPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/locateButton"
                android:layout_centerVertical="true"
                app:contentPadding="8dp"
                >

                <TextView
                    android:id="@+id/textViewNavigationPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Navigate to Campus"
                    android:textSize="18sp"
                    android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
                    />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <!--        the text view that the address is printed to -->
        <TextView
            android:id="@+id/addressHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:gravity="bottom|right"
            android:text="addressHere"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:visibility="visible" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </FrameLayout>

<!--        search bar - some names are incorrect because I created a second search bar by mistake and had to update references to it -->
        <SearchView
            android:id="@+id/sv_location2"
            android:layout_width="390dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/search_rect"
            android:elevation="5dp"
            android:iconifiedByDefault="false"
            android:queryHint="Search" />

<!--        this is the slide out toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <RelativeLayout
            android:id="@+id/relativeLayoutCampusSwitch"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sv_location2"
            android:layout_alignEnd="@id/sv_location2"
            android:background="#9BFFFFFF"
            android:backgroundTint="#E6E6E6"
            android:elevation="20dp">

            <Switch
                android:id="@+id/campus_switch_main"
                android:layout_width="140dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="false"
                android:elevation="10dp"
                android:text="SGW | Loyola" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/addressCardView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:visibility="visible"
            app:contentPaddingBottom="8dp"
            app:contentPaddingLeft="8dp"
            android:elevation="4dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/transportationSelectionTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tabTextAppearance="@style/tabTextStyle"
                >
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="walk"
                    android:icon="@drawable/ic_indoor_navigation_24dp"
                    android:contentDescription="walk"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="shuttle"
                    android:icon="@drawable/ic_directions_bus_black_24dp"
                    android:contentDescription="shuttle"/>


                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="car"
                    android:icon="@drawable/ic_directions_car_black_24dp"
                    android:contentDescription="driving"/>


                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="metro"
                    android:icon="@drawable/ic_directions_subway_black_24dp"
                    android:contentDescription="publicTransportation"/>


            </com.google.android.material.tabs.TabLayout>


        </androidx.cardview.widget.CardView>

        <fragment
            android:id="@+id/google_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_viewer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
